--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <script src="https://kit.fontawesome.com/e21df9c150.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <title> Adriana Wojtanowska | Marketing and Database Coordinator | CRM Specialist</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon (3).ico">    
+    <title> Adriana Wojtanowska | Business Development | Marketing & Data Specialist</title>
 </head>
 <body>
     <!--header-->
     <header id="header-home"> 
         <div class="container">
             <nav id="main-nav">
-                
                 <ul>
                     <li><a href="index.html" class="current">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -22,7 +22,7 @@
                 </ul>
             </nav>
             <div class="header-content">
-                <h1>Adriana Wojtanowska |<span class="txt-type" data-wait="3000" data-words='[" Marketing and Database Specialist | CRM Coordinator"]'></span></h1>
+                <h1>Adriana Wojtanowska |<span class="txt-type" data-wait="3000" data-words='[" Business Development | Marketing & Data Specialist"]'></span></h1>
                 <p class="lead">
                     Fluent in English, German and Polish
                 </p>
@@ -31,39 +31,38 @@
         </div>
     </header>
 <!--section A-->
+<br>
 <section id="home-a" class="text-center py-2">
 <div class="container">
     <h2 class="section-title">Personal Profile</h2>
     <div class="bottom-line"></div>
     <p class="lead">
-        I am a highly motivated, hard working and multilingual person
-        seeking for opportunities to develop in the marketing area. I work
-        efficiently under time pressure and I acquire new skills very fast. I am
-        very eager to learn and to constantly develop. I always put the
-        maximum effort to achieve best possible results. I have solid
-        knowledge of data analysis and web design tools, SAP, CMSs, Excel
-        and more.
+        Marketing and Data Specialist <br>
+        Fluent in English, German and Polish <br>
+        Master in Economics <br>
+        Motivated, Hard-working, Disciplined
     </p>
+    <br>
     <div class="specials">
         <div>
-            <i class="fas fa-file-alt fa-2x"></i>
-            <h3>Content Editing</h3>
-            <p>Creating, translation and editing of articles on various topics in English, Polish and German. Experience with SDL Trados.</p>
+            <i class="fas fa-object-ungroup fa-2x"></i>
+            <h3>Web Design</h3>
+            <p>HTML5, CSS3, JavaScript, jQuery, node.js, WordPress, Sass, Bootstrap</p>
         </div>
         <div>
             <i class="fas fa-desktop fa-2x"></i>
             <h3>Data Analysis</h3>
-            <p>MySQL, PostgreSQL, Excel, Access, Google Analytics, RStudio.</p>
+            <p>SQL, MySQL, PostgreSQL, Oracle, Advanced Excel, Access, Google Analytics, RStudio</p>
         </div>
         <div>
-            <i class="fas fa-object-ungroup fa-2x"></i>
-            <h3>Visual design</h3>
-            <p>HTML5, CSS3, WordPress, Sass, JavaScript.</p>
+            <i class="fas fa-file-alt fa-2x"></i>
+            <h3>Content</h3>
+            <p>Copywriting; Translations from English and German into Polish; Experience with SDLTrados2019</p>
         </div>
         <div>
             <i class="fas fa-thumbs-up fa-2x"></i>
             <h3>Other Skills</h3>
-            <p>Visual Studio Code, Node-Sass, GitHub, SAP, Salesforce, Jira, Confluence, SDL Trados 2019.</p>
+            <p>SAP FI, Typo3, Salesforce, Jira, Confluence, SDL Trados, Visual Studio Code, Atom, Node-Sass, GitHub, </p>
         </div>
     </div>
 </div>
@@ -73,21 +72,20 @@
 <section id="home-c" class="text-center py-2">
     <div class="container">
         <h2 class="section-title">Other Assets</h2>
-        <div class="bottom-line"></div>
-        <p class="lead">Please find below additional information about my background.</p>
+        <div class="bottom-line"></div> <br>
         <div class="process">
             <div>
                 <i class="fas fa-university fa-4x process-icon">
                     <div class="process-step">1</div> <!--this is the number on the icon-->
                 </i>
                 <h3>Master In Economics</h3>
-                <p>Title obtained at the Jagiellonian University in Cracow in 2018.</p>
+                <p>Title obtained at the Jagiellonian University in Cracow</p>
             </div>
             <div>
                 <i class="fas fa-file-alt fa-4x process-icon">
                     <div class="process-step">2</div> <!--this is the number on the icon-->
                 </i>
-                <h3>Translations</h3>
+                <h3>Translation</h3>
                     <p>Translation samples available upon request</p>
             </div>
             <div>
@@ -95,14 +93,14 @@
                     <div class="process-step">3</div> <!--this is the number on the icon-->
                 </i>
                 <h3>German | English</h3>
-                <p>Language skills proven with several certificates.</p>
+                <p>Advanced language skills proven with several certificates</p>
             </div>
             <div>
                 <i class="fas fa-thumbs-up fa-4x process-icon">
                     <div class="process-step">4</div> <!--this is the number on the icon-->
                 </i>
                 <h3>Social Media</h3>
-                <p>Solid experience in social media management.</p>
+                <p>Solid experience in Social Media Management</p>
             </div>
         </div>
     </div>
@@ -111,12 +109,12 @@
 <!--footer-->
 <footer id="main-footer">
     <div class="footer-content container">
-        <p>Copyright &copy; 2019. All rights reserved</p>
+        <p>Copyright &copy; 2020. All rights reserved</p>
         <div class="social">
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-youtube"></i>
+            <a href="http://facebook.com" target="blank"><i class="fab fa-facebook"></i></a> 
+            <a href="http://twitter.com" target="blank"><i class="fab fa-twitter"></i></a> 
+            <a href="http://instagram.com" target="blank"><i class="fab fa-instagram"></i></a> 
+            <a href="http://youtube.com" target="blank"><i class="fab fa-youtube"></i></a>
         </div>
     </div>
 </footer>
