--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
         <div class="bottom-line"></div>
         <p class="lead">Curriculum Vitae</p>
         <div class="about-info">
-            <img src="/img/ada.jpg" alt="" class="bio-image">
-            <img src="/img/ada3.jpg" alt="" class="bio-image2">
+            <img src="./img/ada.jpg" alt="" class="bio-image">
+            <img src="./img/ada3.jpg" alt="" class="bio-image2">
             <div class="bio bg-light">
                 <h4>Personal Description</h4>
                 <p>I am a Web-Design and Data Enthusiast fluent in English, German and Polish. I obtained Master Title in Economics and I have a solid experience with Data Analysis, Content Management and Web Development tools as well as with SAP(FI), various CMSs, Excel and many more. Currently, I am looking for new opportunities to further develop in the marketing field.</p> <br>
